<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/count"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="68dp"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/textview"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <Button
            android:id="@+id/button"
            android:layout_width="89dp"
            android:layout_height="29dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:padding="0dp"
            android:text="@string/click_me"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <Button
            android:id="@+id/button2"
            android:layout_width="72dp"
            android:layout_height="30dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="4dp"
            android:padding="0dp"
            android:text="@string/about"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="5dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>