<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="7dp"
        android:text="@string/first"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="#D57676"
        android:text="Next Screen"
        app:iconTint="#E29292"
        app:layout_constraintBottom_toTopOf="@+id/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text1" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="183dp"
        android:layout_height="35dp"
        android:layout_marginTop="208dp"
        android:text="@string/second"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainScreenInfo"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:background="#71B3E7"
        android:backgroundTint="#4EA4EB"
        android:text="@string/mainClickHere"
        android:textSize="14sp"

        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>